Create page basic layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Dashboard</title>
 </head>
 <body>
-    
+    <header>dummy text</header>
+    <div class="sidebar">dummy text</div>
+    <main>dummy text</main>
 </body>
 </html>
