Create sidebar structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,58 @@
 </head>
 <body>
     <header>dummy text</header>
-    <div class="sidebar">dummy text</div>
+    <div class="sidebar">
+        <div class="logo">
+            <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon">
+            <h1 class="logo-text">Dashboard</h1>
+        </div>
+
+        <div class="first-nav">
+            <ul>
+                <li>
+                    <img src="assets/icons/home.svg" alt="home" class="nav-icon">
+                    <span class="nav-text">Home</span>
+                </li>
+                <li>
+                    <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="nav-icon">
+                    <span class="nav-text">Profile</span>
+                </li>
+                <li>
+                    <img src="assets/icons/message-reply.svg" alt="messages" class="nav-icon">
+                    <span class="nav-text">Messages</span>
+                </li>
+                <li>
+                    <img src="assets/icons/clock-time-three.svg" alt="history" class="nav-icon">
+                    <span class="nav-text">History</span>
+                </li>
+                <li>
+                    <img src="assets/icons/file-multiple.svg" alt="tasks" class="nav-icon">
+                    <span class="nav-text">Tasks</span>
+                </li>
+                <li>
+                    <img src="assets/icons/account-group.svg" alt="communities" class="nav-icon">
+                    <span class="nav-text">Communities</span>
+                </li>
+            </ul>     
+        </div>
+
+        <div class="second-nav">
+            <ul>
+                <li>
+                    <img src="assets/icons/cog.svg" alt="settings" class="nav-icon">
+                    <span class="nav-text">Settings</span>
+                </li>
+                <li>
+                    <img src="assets/icons/help-box.svg" alt="support" class="nav-icon">
+                    <span class="nav-text">Support</span>
+                </li>
+                <li>
+                    <img src="assets/icons/shield-check.svg" alt="privacy" class="nav-icon">
+                    <span class="nav-text">Privacy</span>
+                </li>
+            </ul>     
+        </div>
+    </div>
     <main>dummy text</main>
 </body>
 </html>
