Style the sidebar

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
             <ul>
                 <li>
                     <img src="assets/icons/home.svg" alt="home" class="nav-icon">
-                    <span class="nav-text">Home</span>
+                    <span class="nav-text"><a href="#">Home</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="nav-icon">
-                    <span class="nav-text">Profile</span>
+                    <span class="nav-text"><a href="#">Profile</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/message-reply.svg" alt="messages" class="nav-icon">
-                    <span class="nav-text">Messages</span>
+                    <span class="nav-text"><a href="#">Messages</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/clock-time-three.svg" alt="history" class="nav-icon">
-                    <span class="nav-text">History</span>
+                    <span class="nav-text"><a href="#">History</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/file-multiple.svg" alt="tasks" class="nav-icon">
-                    <span class="nav-text">Tasks</span>
+                    <span class="nav-text"><a href="#">Tasks</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/account-group.svg" alt="communities" class="nav-icon">
-                    <span class="nav-text">Communities</span>
+                    <span class="nav-text"><a href="#">Communities</a></span>
                 </li>
             </ul>     
         </div>
@@ -50,15 +50,15 @@
             <ul>
                 <li>
                     <img src="assets/icons/cog.svg" alt="settings" class="nav-icon">
-                    <span class="nav-text">Settings</span>
+                    <span class="nav-text"><a href="#">Settings</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/help-box.svg" alt="support" class="nav-icon">
-                    <span class="nav-text">Support</span>
+                    <span class="nav-text"><a href="#">Support</a></span>
                 </li>
                 <li>
                     <img src="assets/icons/shield-check.svg" alt="privacy" class="nav-icon">
-                    <span class="nav-text">Privacy</span>
+                    <span class="nav-text"><a href="#">Privacy</a></span>
                 </li>
             </ul>     
         </div>
