Create navbar structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <header>dummy text</header>
+    <header>
+        <div class="top">
+            <form class=".search-form" action="#">
+                <button></button>
+                <input type="search" name="query" id="search">
+            </form>
+            <div class="account">
+                <img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="notification-icon">
+                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
+                <span class="user-name">Morgan Oakley</span>
+            </div>
+        </div>
+
+        <div class="bottom">
+            <div class="left">
+                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
+                <p>
+                    <span class="welcome-message">Hello there,</span><br>
+                    <span class="user-name">Morgan Oakley (@morgan)</span>
+                </p>    
+            </div>
+
+            <div class="right">
+                <button class="nav-btn"><a href="#">New</a></button>
+                <button class="nav-btn"><a href="#">Upload</a></button>
+                <button class="nav-btn"><a href="#">Share</a></button>
+            </div>
+        </div>
+    </header>
+
     <div class="sidebar">
         <div class="logo">
             <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon">
