--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
     <header>
         <div class="top">
-            <form class=".search-form" action="#">
+            <form class="search-form" action="#">
                 <button></button>
-                <input type="search" name="query" id="search">
+                <input type="search" name="query" class="search-field">
             </form>
+
             <div class="account">
-                <img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="notification-icon">
+                <img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="svg-icon">
                 <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
                 <span class="user-name">Morgan Oakley</span>
             </div>
@@ -49,27 +50,27 @@
         <div class="first-nav">
             <ul>
                 <li>
-                    <img src="assets/icons/home.svg" alt="home" class="nav-icon">
+                    <img src="assets/icons/home.svg" alt="home" class="svg-icon">
                     <span class="nav-text"><a href="#">Home</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="nav-icon">
+                    <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="svg-icon">
                     <span class="nav-text"><a href="#">Profile</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/message-reply.svg" alt="messages" class="nav-icon">
+                    <img src="assets/icons/message-reply.svg" alt="messages" class="svg-icon">
                     <span class="nav-text"><a href="#">Messages</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/clock-time-three.svg" alt="history" class="nav-icon">
+                    <img src="assets/icons/clock-time-three.svg" alt="history" class="svg-icon">
                     <span class="nav-text"><a href="#">History</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/file-multiple.svg" alt="tasks" class="nav-icon">
+                    <img src="assets/icons/file-multiple.svg" alt="tasks" class="svg-icon">
                     <span class="nav-text"><a href="#">Tasks</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/account-group.svg" alt="communities" class="nav-icon">
+                    <img src="assets/icons/account-group.svg" alt="communities" class="svg-icon">
                     <span class="nav-text"><a href="#">Communities</a></span>
                 </li>
             </ul>     
@@ -78,15 +79,15 @@
         <div class="second-nav">
             <ul>
                 <li>
-                    <img src="assets/icons/cog.svg" alt="settings" class="nav-icon">
+                    <img src="assets/icons/cog.svg" alt="settings" class="svg-icon">
                     <span class="nav-text"><a href="#">Settings</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/help-box.svg" alt="support" class="nav-icon">
+                    <img src="assets/icons/help-box.svg" alt="support" class="svg-icon">
                     <span class="nav-text"><a href="#">Support</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/shield-check.svg" alt="privacy" class="nav-icon">
+                    <img src="assets/icons/shield-check.svg" alt="privacy" class="svg-icon">
                     <span class="nav-text"><a href="#">Privacy</a></span>
                 </li>
             </ul>     
