Fix template issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </form>
 
             <div class="account">
-                <img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="svg-icon">
+                <a href="#"><img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="svg-icon"></a>
                 <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
                 <span class="user-name">Morgan Oakley</span>
             </div>
