--- a/index.html
+++ b/index.html
@@ -93,6 +93,50 @@
             </ul>     
         </div>
     </div>
-    <main>dummy text</main>
+    
+    <main>
+        <div class="projects">
+            <h2 class="section-title">Projects</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="announcements">
+            <h2 class="section-title">Announcements</h2>
+        </div>
+
+        <div class="trending">
+            <h2 class="section-title">Trending</h2>
+        </div>
+    </main>
 </body>
 </html>
