Standaradize svg icon sizes

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             </form>
 
             <div class="account">
-                <a href="#"><img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="svg-icon"></a>
-                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
+                <a href="#"><img src="assets/icons/bell-ring-outline.svg" alt="notifications" class="svg-icon-sm"></a>
+                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar svg-icon-md">
                 <span class="user-name">Morgan Oakley</span>
             </div>
         </div>
 
         <div class="bottom">
             <div class="left">
-                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar">
+                <img src="assets/icons/avatar.svg" alt="avatar" class="user-avatar svg-icon-lg">
                 <p>
                     <span class="welcome-message">Hello there,</span><br>
                     <span class="user-name">Morgan Oakley (@morgan)</span>
@@ -43,34 +43,34 @@
 
     <div class="sidebar">
         <div class="logo">
-            <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon">
+            <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon svg-icon-md">
             <h1 class="logo-text">Dashboard</h1>
         </div>
 
         <div class="first-nav">
             <ul>
                 <li>
-                    <img src="assets/icons/home.svg" alt="home" class="svg-icon">
+                    <img src="assets/icons/home.svg" alt="home" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Home</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="svg-icon">
+                    <img src="assets/icons/card-account-mail-outline.svg" alt="profile" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Profile</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/message-reply.svg" alt="messages" class="svg-icon">
+                    <img src="assets/icons/message-reply.svg" alt="messages" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Messages</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/clock-time-three.svg" alt="history" class="svg-icon">
+                    <img src="assets/icons/clock-time-three.svg" alt="history" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">History</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/file-multiple.svg" alt="tasks" class="svg-icon">
+                    <img src="assets/icons/file-multiple.svg" alt="tasks" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Tasks</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/account-group.svg" alt="communities" class="svg-icon">
+                    <img src="assets/icons/account-group.svg" alt="communities" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Communities</a></span>
                 </li>
             </ul>     
@@ -79,15 +79,15 @@
         <div class="second-nav">
             <ul>
                 <li>
-                    <img src="assets/icons/cog.svg" alt="settings" class="svg-icon">
+                    <img src="assets/icons/cog.svg" alt="settings" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Settings</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/help-box.svg" alt="support" class="svg-icon">
+                    <img src="assets/icons/help-box.svg" alt="support" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Support</a></span>
                 </li>
                 <li>
-                    <img src="assets/icons/shield-check.svg" alt="privacy" class="svg-icon">
+                    <img src="assets/icons/shield-check.svg" alt="privacy" class="svg-icon-sm">
                     <span class="nav-text"><a href="#">Privacy</a></span>
                 </li>
             </ul>     
@@ -102,9 +102,9 @@
                     <h3 class="card-title">Super Cool Project</h3>
                     <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <div class="btn-container">
-                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
                     </div>
                 </div>
 
@@ -112,9 +112,9 @@
                     <h3 class="card-title">Super Cool Project</h3>
                     <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <div class="btn-container">
-                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
                     </div>
                 </div>
 
@@ -122,9 +122,9 @@
                     <h3 class="card-title">Super Cool Project</h3>
                     <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <div class="btn-container">
-                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon"></a>
-                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon"></a>
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
                     </div>
                 </div>
             </div>
