--- a/index.html
+++ b/index.html
@@ -127,6 +127,34 @@
                         <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
                     </div>
                 </div>
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-title">Super Cool Project</h3>
+                    <p class="card-description">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <div class="btn-container">
+                        <a href="#"><img src="assets/icons/star-plus-outline.svg" alt="star" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/eye-plus-outline.svg" alt="watch" class="svg-icon-sm"></a>
+                        <a href="#"><img src="assets/icons/source-fork.svg" alt="fork" class="svg-icon-sm"></a>
+                    </div>
+                </div>
+
             </div>
         </div>
 
