--- a/index.html
+++ b/index.html
@@ -160,6 +160,27 @@
 
         <div class="announcements">
             <h2 class="section-title">Announcements</h2>
+
+            <div class="card">
+                <div class="card-item">
+                    <h3 class="card-title">Site Maintenance</h3>
+                    <p class="card-description">
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    </p>
+                </div>
+                <div class="card-item">
+                    <h3 class="card-title">Site Maintenance</h3>
+                    <p class="card-description">
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    </p>
+                </div>
+                <div class="card-item">
+                    <h3 class="card-title">Site Maintenance</h3>
+                    <p class="card-description">
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    </p>
+                </div>
+            </div>
         </div>
 
         <div class="trending">
