Create the structure of trending section

--- a/index.html
+++ b/index.html
@@ -185,6 +185,37 @@
 
         <div class="trending">
             <h2 class="section-title">Trending</h2>
+
+            <div class="card">
+                <div class="card-item">
+                    <img src="assets/icons/avatar.svg" alt="avatar" class="svg-icon-md">
+                    <div class="right">
+                        <p class="card-title">@morgan</p>
+                        <p class="card-description">Super Cool Project</p>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="assets/icons/avatar.svg" alt="avatar" class="svg-icon-md">
+                    <div class="right">
+                        <p class="card-title">@morgan</p>
+                        <p class="card-description">Super Cool Project</p>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="assets/icons/avatar.svg" alt="avatar" class="svg-icon-md">
+                    <div class="right">
+                        <p class="card-title">@morgan</p>
+                        <p class="card-description">Super Cool Project</p>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="assets/icons/avatar.svg" alt="avatar" class="svg-icon-md">
+                    <div class="right">
+                        <p class="card-title">@morgan</p>
+                        <p class="card-description">Super Cool Project</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
