--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="sidebar">
         <div class="logo">
-            <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon svg-icon-md">
+            <img src="assets/icons/view-dashboard.svg" alt="Dashboard" class="logo-icon svg-icon-md-unrounded">
             <h1 class="logo-text">Dashboard</h1>
         </div>
 
